Add my work to the group project

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "fliter_page",
-    "short_name": "fliter_page",
+    "name": "soe305pro",
+    "short_name": "soe305pro",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
